[package]
version = "0.1.0"
name = "blevm"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
sp1-zkvm = "3.0.0-rc4"
rsp-client-executor = {workspace=true}
nmt-rs = {workspace=true}
celestia-types = {workspace=true}
reth-primitives = {workspace=true}
bincode = {workspace=true}

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "sha2-v0.10.8-patch-v1" }
crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", tag = "crypto_bigint-v0.5.5-patch-v1" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "tiny_keccak-v2.0.2-patch-v1" }